<resources>
    <string name="app_name">Draw On</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="goBack">goBack</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="reset">reset</string>
    <string name="go">Go</string>
    <string name="share">Share</string>
    <string name="share_ui">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tab_bar_desc">Tab bar</string>
    <string name="empty_file_name">Untitled</string>
    <string name="save_alert_message">Do you really want to quit without saving?</string>
    <string name="save_text">Save</string>
    <string name="create">Create</string>
    <string name="create_alert_message">Create a new project</string>
    <string name="hint_title">Title</string>
    <string name="hint_height">Height</string>
    <string name="hint_width">Width</string>
    <string name="bnt_cancel">Cancel</string>
    <string name="btn_create">Create</string>
    <string name="quit">Quit</string>
    <string name="save">Save</string>
    <string name="untitled">Untitled</string>
    <string name="default_width">1280</string>
    <string name="default_height">720</string>
    <string name="draw">Draw</string>
    <string name="on">On</string>
    <string name="tagline"># let\'s draw the change</string>
    <string name="baseline">Developed by Team flax Studio</string>
    <string name="properties">Properties</string>
    <string name="shape">Shape</string>
    <string name="rectangle">Rectangle</string>
    <string name="appearance">Appearance</string>
    <string name="stroke_color">Stroke Color</string>
    <string name="ff22ffaa">#ff22ffaa</string>
</resources>