<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="25dp"
    android:paddingVertical="35dp"
    android:layout_gravity="center"
    android:background="@drawable/rect_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/create_alert_message"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/medium_text" />


    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="Title"
        android:background="@drawable/rounded_background"
        android:hint="@string/hint_title"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        android:text="@string/untitled"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textColorHint="#94001662"
        android:textSize="@dimen/medium_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="width"
            android:background="@drawable/rounded_background"
            android:hint="@string/hint_width"
            android:inputType="number"
            android:paddingVertical="8dp"
            android:text="@string/default_width"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textColorHint="#94001662"
            android:textSize="@dimen/medium_text"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edit_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:autofillHints="height"
            android:background="@drawable/rounded_background"
            android:hint="@string/hint_height"
            android:inputType="number"
            android:paddingVertical="8dp"
            android:text="@string/default_height"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textColorHint="#94001662"
            android:textSize="@dimen/medium_text"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_dialogue_box"
            android:text="@string/bnt_cancel"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/medium_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_dialogue_box"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/btn_create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text" />
    </LinearLayout>
</LinearLayout>