<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <!-- AppBar layout for using Toolbar as AppBar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/setting_app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:elevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <ImageButton
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:background="@android:color/transparent"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:src="@drawable/icon_arrow_back"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="@+id/toolbar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="@string/settings"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/setting_app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_reset"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_reset"/>
            <TextView
                android:id="@+id/tv_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/reset_to_default"
                style="@style/textStyle"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_arrow_right"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_share"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/icon_share"/>
            <TextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp"
                android:text="@string/share"
                style="@style/textStyle"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_arrow_right"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_rate_us"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_rate_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/icon_rate"/>
            <TextView
                android:id="@+id/tv_rate_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/rate_us"
                style="@style/textStyle"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_arrow_right"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_feedback"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/icon_feedback"/>
            <TextView
                android:id="@+id/tv_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/feedback"
                style="@style/textStyle"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_arrow_right"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_privacy_policy"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/icon_privacy"/>
            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/privacy_policy"
                style="@style/textStyle"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_arrow_right"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>